--- a/index.pug
+++ b/index.pug
@@ -2,25 +2,35 @@ doctype html
 html
   head
     meta(charset="utf-8")
-    link(rel="stylesheet",type="text/css",href="bootstrap3.min.css")
-    link(rel="stylesheet",type="text/css",href="index.css")
-    script(type="text/javascript",src="jquery-1.10.2.min.js")
-    script(type="text/javascript",src="bootstrap3.min.js")
-    script(type="text/javascript",src="index.js")
+    link(rel="stylesheet", type="text/css", href="bootstrap3.min.css")
+    link(rel="stylesheet", type="text/css", href="index.css")
+    script(type="text/javascript", src="jquery-1.10.2.min.js")
+    script(type="text/javascript", src="bootstrap3.min.js")
+    script(type="text/javascript", src="index.js")
   body
-    #timer ????
-    a#min60.btn.btn-info.fbtn(onclick="adjust(-60)") -60
-    a#min10.btn.btn-info.fbtn(onclick="adjust(-10)") -10
-    a#toggle.btn.btn-primary(onclick="toggle()") RUN
-    a#reset.btn.btn-warning(onclick="reset()") RESET
-    a#hide.btn.btn-default(onclick="show()") &#xd60;
-    a#add10.btn.btn-info.fbtn(onclick="adjust(10)") +10
-    a#add60.btn.btn-info.fbtn(onclick="adjust(60)") +60
-    a#def10.btn.btn-success.fbtn(onclick="adjust(0,10)") 10 sec
-    a#def30.btn.btn-success.fbtn(onclick="adjust(0,30)") 30 sec
-    a#def60.btn.btn-success.fbtn(onclick="adjust(0,60)") 1 min
-    a#def180.btn.btn-success.fbtn(onclick="adjust(0,180)") 3 min
-    a#def300.btn.btn-success.fbtn(onclick="adjust(0,300)") 5 min
-    a#def600.btn.btn-success.fbtn(onclick="adjust(0,600)") 10 min
-    a#def900.btn.btn-success.fbtn(onclick="adjust(0,900)") 15 min
-    a#def1800.btn.btn-success.fbtn(onclick="adjust(0,1800)") 30 min
+    .layout
+      #timer.progress-timer(aria-live="polite")
+        .time-display
+          span#time-text 01.00.00
+        .progress-wrapper
+          .progress-track(role="progressbar", aria-valuemin="0", aria-valuemax="100", aria-valuenow="100", aria-label="Remaining time")
+            .progress-fill#progress-fill
+            .progress-indicator#progress-indicator(aria-hidden="true") 😊
+      .controls
+        .control-row
+          a#min60.btn.btn-info.fbtn(onclick="adjust(-60)") -60
+          a#min10.btn.btn-info.fbtn(onclick="adjust(-10)") -10
+          a#toggle.btn.btn-primary(onclick="toggle()") RUN
+          a#reset.btn.btn-warning(onclick="reset()") RESET
+          a#hide.btn.btn-default(onclick="show()") &#xd60;
+          a#add10.btn.btn-info.fbtn(onclick="adjust(10)") +10
+          a#add60.btn.btn-info.fbtn(onclick="adjust(60)") +60
+        .preset-row
+          a#def10.btn.btn-success.fbtn(onclick="adjust(0,10)") 10 sec
+          a#def30.btn.btn-success.fbtn(onclick="adjust(0,30)") 30 sec
+          a#def60.btn.btn-success.fbtn(onclick="adjust(0,60)") 1 min
+          a#def180.btn.btn-success.fbtn(onclick="adjust(0,180)") 3 min
+          a#def300.btn.btn-success.fbtn(onclick="adjust(0,300)") 5 min
+          a#def600.btn.btn-success.fbtn(onclick="adjust(0,600)") 10 min
+          a#def900.btn.btn-success.fbtn(onclick="adjust(0,900)") 15 min
+          a#def1800.btn.btn-success.fbtn(onclick="adjust(0,1800)") 30 min
